--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav li{
     text-align: center;
     font-size: 12px;
 }
-.second{
+article{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
